added twilio sms send

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,13 @@
     <div class="row">
         <div class="col-12">
         <h6>
-        <a href="#">base setup</a>
+        <a href="/admin/">Admin</a>
+        </h6>        
+        <h6>
+        <a href="/">Home</a>
+        </h6>        
+        <h6>
+        <a href="{% url 'twilioapp:send-twilio-sms' %}">Send smsm Via Twilio</a>
         </h6>        
         
        
