--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimal-ui" />
   {% comment %}
   <meta http-equiv="refresh" content="3"> {% endcomment %}
-  <title>{% block title %} Django Chat{% endblock title %} </title>
+  <title>{% block title %} Django Twilio{% endblock title %} </title>
   <!-- Fevicon -->
   <!-- Favicons -->
   <link rel="icon" href="{% static 'img/favicon.ico' %}" sizes="32x32" />
